[package]
name = "turbine"
version = "0.0.1"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "binero"
]
keywords = ["engine", "3d", "piston"]
license = "MIT"
repository = "https://github.com/PistonDevelopers/turbine.git"
homepage = "https://github.com/PistonDevelopers/turbine"
description = "A 3D game engine with built-in editor"

[lib]
name = "turbine"
path = "./src/lib.rs"

[dependencies]
bitflags = "0.3.2"
vecmath = "0.2.0"
piston_window = "0.34.0"
pistoncore-sdl2_window = "0.23.0"
gfx = "0.8.0"
gfx_device_gl = "0.7.0"
piston_meta = "0.24.0"
camera_controllers = "0.10.0"
gfx_debug_draw = "0.9.1"
gfx_text = "0.8.0"
log = "0.3.2"
range = "0.3.1"
conrod = "0.31.0"
find_folder = "0.3.0"
