[package]
name = "turbine"
version = "0.0.2"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "binero"
]
keywords = ["engine", "3d", "piston"]
license = "MIT"
repository = "https://github.com/PistonDevelopers/turbine.git"
homepage = "https://github.com/PistonDevelopers/turbine"
description = "A 3D game engine with built-in editor"

[lib]
name = "turbine"
path = "./src/lib.rs"

[dependencies]
bitflags = "1.0.0"
vecmath = "0.3.1"
piston_window = "0.73.0"
pistoncore-sdl2_window = "0.46.0"
gfx = "0.16.1"
gfx_device_gl = "0.14.4"
piston_meta = "0.29.1"
camera_controllers = "0.23.0"
gfx_debug_draw = "0.19.0"
gfx_text = "0.20.0"
log = "0.3.8"
range = "0.3.1"
conrod = "0.56.0"
find_folder = "0.3.0"
