[package]
name = "turbine"
version = "0.1.1"
edition = "2024"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "binero"
]
keywords = ["engine", "3d", "piston"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/PistonDevelopers/turbine.git"
homepage = "https://github.com/PistonDevelopers/turbine"
documentation = "https://docs.rs/turbine"
description = "3D game engine for content production"
readme = "README.md"

[lib]
name = "turbine"
path = "./src/lib.rs"

[dependencies.turbine_process3d]
version = "0.12.0"
path = "process3d"

[dependencies.turbine_reactive]
version = "0.2.0"
path = "reactive"

[dependencies.turbine_scene3d]
version = "0.42.0"
path = "scene3d"
