[package]
name = "turbine_process3d"
version = "0.2.1"
edition = "2024"
description = "Processing for the Turbine engine"
readme = "README.md"
license = "MIT"
keywords = ["turbine", "processing", "ray", "tracing", "piston"]
repository = "https://github.com/PistonDevelopers/turbine.git"
homepage = "https://github.com/PistonDevelopers/turbine"
documentation = "https://docs.rs/turbine_process3d"

[dependencies]
vecmath = "1.0.0"
piston3d-cam = "0.7.0"
