[package]
name = "turbine_scene3d"
version = "0.41.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
description = "Scene rendering for the Turbine engine"
readme = "README.md"
license = "MIT"
keywords = ["turbine", "rendering", "dynamic", "piston"]
repository = "https://github.com/PistonDevelopers/turbine.git"
homepage = "https://github.com/PistonDevelopers/turbine"
documentation = "https://docs.rs/turbine_scene3d"
exclude = ["assets/*"]

[features]
default = []

[dependencies]
gl = "0.14.0"
piston = "1.0.0"
vecmath = "1.0.0"
piston2d-opengl_graphics = "0.89.0"
wavefront_obj = "11.0.0"
image = "0.25.5"

[dev-dependencies]
pistoncore-sdl2_window = "0.71.0"
camera_controllers = "0.36.0"

