[package]
name = "turbine_scene3d"
version = "0.42.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
description = "Scene graph rendering for the Turbine engine"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["turbine", "rendering", "dynamic", "piston"]
repository = "https://github.com/PistonDevelopers/turbine.git"
homepage = "https://github.com/PistonDevelopers/turbine"
documentation = "https://docs.rs/turbine_scene3d"
exclude = ["assets/*", "backends/*"]
edition = "2024"

[features]
default = []

[dependencies]
vecmath = "1.0.0"
wavefront_obj = "11.0.0"
