[package]
name = "turbine_scene3d-opengl"
version = "0.1.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
description = "OpenGL backend for Turbine-Scene3D"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["turbine", "rendering", "backend", "piston"]
repository = "https://github.com/PistonDevelopers/turbine.git"
homepage = "https://github.com/PistonDevelopers/turbine"
documentation = "https://docs.rs/turbine_scene3d-opengl"
exclude = ["assets/*", "backends/*"]
edition = "2024"

[dependencies.turbine_scene3d]
version = "0.42.0"
path = "../../"

[dependencies]
vecmath = "1.0.0"
image = "0.25.5"
gl = "0.14.0"
piston2d-opengl_graphics = "0.89.0"
