[package]
name = "turbine_scene3d-opengl"
version = "0.3.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
description = "OpenGL backend for Turbine-Scene3D"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["turbine", "rendering", "backend", "piston"]
repository = "https://github.com/PistonDevelopers/turbine.git"
homepage = "https://github.com/PistonDevelopers/turbine"
documentation = "https://docs.rs/turbine_scene3d-opengl"
edition = "2024"

[dependencies.turbine_scene3d]
version = "0.44.0"
path = "../../"

[dependencies]
vecmath = "1.0.0"
image = "0.25.5"
gl = "0.14.0"
piston2d-opengl_graphics = "0.89.0"

[dev-dependencies]
piston = "1.0.0"
pistoncore-sdl2_window = "0.71.0"
camera_controllers = "0.36.0"
