[package]
name = "turbine_scene3d-wgpu"
version = "0.2.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
description = "WGPU backend for Turbine-Scene3D"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["turbine", "rendering", "scene3d", "wgpu", "piston"]
repository = "https://github.com/PistonDevelopers/turbine.git"
homepage = "https://github.com/PistonDevelopers/turbine"
documentation = "https://docs.rs/turbine_scene3d-wgpu"
edition = "2024"

[dependencies.turbine_scene3d]
version = "0.43.0"
path = "../../"

[dependencies]
vecmath = "1.0.0"
image = "0.25.5"
wgpu = "27.0.1"
bytemuck = "1.24.0"
piston-texture = "0.9.0"

[dev-dependencies]
camera_controllers = "0.36.0"
piston_window = "0.138.2"
